--- a/Doggo/Views/Shared/_Layout.cshtml
+++ b/Doggo/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Walkers" asp-action="Index">Walkers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Owners" asp-action="Index">Owners</a>
+                        </li>
                     </ul>
                 </div>
             </div>
