add login and model validations

--- a/Doggo/Views/Owners/Edit.cshtml
+++ b/Doggo/Views/Owners/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Doggo.Models.Owner
+﻿@model Doggo.Models.ViewModels.OwnerFormViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,31 +12,31 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input asp-for="Id" type="hidden" class="form-control" />
+            <input asp-for="Owner.Id" type="hidden" class="form-control" />
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Owner.Email" class="control-label"></label>
+                <input asp-for="Owner.Email" class="form-control" />
+                <span asp-validation-for="Owner.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="Owner.Name" class="control-label"></label>
+                <input asp-for="Owner.Name" class="form-control" />
+                <span asp-validation-for="Owner.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
+                <label asp-for="Owner.Address" class="control-label"></label>
+                <input asp-for="Owner.Address" class="form-control" />
+                <span asp-validation-for="Owner.Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NeighborhoodId" class="control-label"></label>
-                <input asp-for="NeighborhoodId" class="form-control" />
-                <span asp-validation-for="NeighborhoodId" class="text-danger"></span>
+                <label asp-for="Owner.NeighborhoodId" class="control-label"></label>
+                <input asp-for="Owner.NeighborhoodId" class="form-control" />
+                <span asp-validation-for="Owner.NeighborhoodId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
+                <label asp-for="Owner.Phone" class="control-label"></label>
+                <input asp-for="Owner.Phone" class="form-control" />
+                <span asp-validation-for="Owner.Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
